--- a/my-redux/package.json
+++ b/my-redux/package.json
@@ -12,7 +12,8 @@
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "redux-devtools-extension": "^2.13.9"
+    "redux-devtools-extension": "^2.13.9",   
+    "axios": "^0.16.2"
   },
   "scripts": {
     "start": "react-scripts start",
